--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,8 +7,9 @@ ja:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
     attributes:
-      lesson:
-        max_reserve_count: 最大定員数
+      color:
+        name: 名前
+        note: 備考
 
   date:
     abbr_day_names:
