--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,6 +10,9 @@ ja:
       color:
         name: 名前
         note: 備考
+      contact:
+        name: 名前
+        note: 備考
 
   date:
     abbr_day_names:
