画像アップロード機能を実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,6 +16,7 @@ ja:
         special: 特徴
         color_id: カラー
         contact_id: 外部端子
+        image: 画像
       color:
         name: 名前
         note: 備考
