商品検索画面のデザインレイアウトなど全体的に修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -161,7 +161,7 @@ ja:
     submit:
       create: 登録する
       submit: 保存する
-      update: 更新する
+      update: 変更する
   number:
     currency:
       format:
